<resources>
    <string name="app_name">ForkFlow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcoming">Welcome Back</string>
    <string name="signin_request">Sign in to your Food Planner account</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="login_as_a_guest">Continue as guest</string>
    <string name="dont_have_an_account">Dont have an account ?</string>
    <string name="signup">Sign Up now</string>
    <string name="create_account">Create Account</string>
    <string name="simi_slogan">Start planning your meals today</string>
    <string name="fullname">Full Name</string>
    <string name="sign">Sign Up</string>
    <string name="already_have_acc">Already have an account ?</string>
    <string name="signup_via_fb">Sign Up with Facebook</string>
    <string name="signup_via_google">Sign Up with Google</string>
    <string name="signup_via_tiktok">Sign Up with TikTok</string>
    <string name="welcome_back">Welcome Back ,</string>
    <string name="client_name">Client Name</string>
    <string name="logout">Log Out</string>
    <string name="today_date">Today\'s Date</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_org">Meal Origin</string>
    <string name="meal_desc">Meal Description</string>
    <string name="suggested_for_u">Suggested For You</string>
    <string name="location">Location</string>
    <string name="Ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="name">Name</string>
    <string name="search_meals">Find Your Meals</string>
    <string name="search_bar_text">Search For Meals ....</string>
    <string name="your_fav_meals">Your Favorite Meals</string>
    <string name="add_to_calendar">Add To Calendar</string>
</resources>