<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".searchscreen.view.SearchFragment"
        android:background="@color/background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/search_bg"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_meals"
                android:textSize="@dimen/text_size_xlarge"
                android:textColor="@color/white"
                ></TextView>

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:iconifiedByDefault="false"
                android:theme="@style/SearchViewTheme"
                android:queryHint="@string/search_bar_text"
                ></SearchView>
            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                app:singleSelection="true"
                app:selectionRequired="true"
                >

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/accent"
                    android:text="@string/country"
                    ></com.google.android.material.chip.Chip>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/accent"
                    android:text="@string/category"></com.google.android.material.chip.Chip>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/accent"
                    android:text="@string/ingredient"></com.google.android.material.chip.Chip>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/accent"
                    tools:text="@string/name"></com.google.android.material.chip.Chip>

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selection_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:ignore="SpeakableTextPresentCheck"
            tools:itemCount="6"
            tools:listitem="@layout/selection_img_cardview"></androidx.recyclerview.widget.RecyclerView>

        <androidx.recyclerview.widget.RecyclerView
            android:nestedScrollingEnabled="false"
            android:id="@+id/filtered_meal_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:spanCount="2"
            tools:itemCount="6"
            tools:listitem="@layout/meal_card_view"></androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>