<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/primary"
    >


    <TextView
        android:id="@+id/client_name_home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/client_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welecome_back_txt" />

    <TextView
        android:id="@+id/welecome_back_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_btn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/theme_transparent"
        app:backgroundTint="@null"
        app:cornerRadius="28dp"
        android:contentDescription="@string/logout"
        android:paddingTop="12dp"
        android:text=""
        app:icon="@drawable/login"
        app:iconGravity="textTop"
        app:iconSize="@dimen/text_size_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.google.android.material.button.MaterialButton>

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="72dp"
        android:layout_marginTop="125dp"
        android:background="@drawable/theme_transparent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/today_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:text="@string/today_date"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_regular" />

        <TextView
            android:id="@+id/date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:text="@string/today_date"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="Sunday , 6th of Jun" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>